--- a/hci_project/main_window.ui
+++ b/hci_project/main_window.ui
@@ -66,7 +66,9 @@
     </property>
     <property name="styleSheet">
      <string notr="true">color: white;
-background-color:rgb(85, 85, 255)</string>
+background-color:rgb(85, 85, 255);
+border-radius: 10;
+</string>
     </property>
     <property name="text">
      <string>Enter</string>
